--- a/.github/workflows/update_weather.yml
+++ b/.github/workflows/update_weather.yml
@@ -2,24 +2,19 @@ name: Update Weather in README
 
 on:
   schedule:
-    - cron: "* * * * *"   # 5분마다(과제 샘플대로)
-  push:
-    branches: [ "main" ]
+    - cron: "*/5 * * * *"
   workflow_dispatch:
 
 permissions:
-  contents: write   # git push(커밋 푸시)하려면 필요
+  contents: write
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
