Schedule: run daily at 00:00 KST

--- a/.github/workflows/update_weather.yml
+++ b/.github/workflows/update_weather.yml
@@ -2,7 +2,7 @@ name: Update Weather in README
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "0 15 * * *"
   workflow_dispatch:
 
 permissions:
