--- a/.github/workflows/update_weather.yml
+++ b/.github/workflows/update_weather.yml
@@ -2,7 +2,7 @@ name: Update Weather in README
 
 on:
   schedule:
-    - cron: "0 15 * * *"
+    - cron: "0 15 * * *" # 매일 15:00 UTC (한국 시간 00:00 자정)
   workflow_dispatch:
 
 permissions:
@@ -33,5 +33,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git commit -m "자동 업데이트: 서울 날씨 정보 갱신" || echo "No changes to commit"
+          git commit -m "☀️ 날씨 업데이트: 충남 서산" || echo "No changes to commit"
           git push
